# MultimodalAssistantMask

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  pyproject.toml
docs/: multimodal_assistant_mask_design.md
examples/: generic_processor_collator.py  minimal_gemma4_e2b_it_assistant_mask.py  minimal_qwen2_5_omni_assistant_mask.py  minimal_qwen3_omni_assistant_mask.py
plans/: core_frame_mask_and_labels_plan.md  minimal_assistant_mask_usage_examples_plan.md  multimodal_assistant_mask_implementation_plan.md  multimodal_processor_regression_tests_plan.md  phase0_project_scaffold_and_processor_verification_plan.md  readme_and_generic_collator_example_plan.md  real_multimodal_usage_example_plan.md  stopping_criteria_plan.md  training_chat_templates_plan.md  validation_debug_helpers_plan.md
progress/: core_frame_mask_and_labels_progress.md  minimal_assistant_mask_usage_examples_progress.md  multimodal_assistant_mask_progress.md  multimodal_processor_regression_tests_progress.md  phase0_project_scaffold_and_processor_verification_progress.md  readme_and_generic_collator_example_progress.md  real_multimodal_usage_example_progress.md  stopping_criteria_progress.md  training_chat_templates_progress.md  validation_debug_helpers_progress.md
src/mm_assistant_mask/: __init__.py  frame_spec.py  labels.py  stopping.py  (+2 more)
tests/: test_examples.py  test_frame_mask_real_processors.py  test_multimodal_processor_real_inputs.py  test_package_smoke.py  test_real_processors.py  test_stopping_real_tokenizer.py  test_training_templates.py  test_validation_real_processors.py
(+4 files in other folders)
