[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-assistant-mask"
version = "0.0.0"
description = "Assistant-only label masking for multimodal processor input_ids."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
